# UofG-RTEP-BabyMonitor

./: .gitignore  404.html  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  Readme.md  aclocal.m4  babymonitor.service.in  config.h  config.h.in  config.status  configure  configure.ac  cribsense  cribsense.service  index.html  libtool  mkdocs.yml  pre-ver Readme.md  search.html  sitemap.xml
autom4te.cache/: output.0  output.3  output.4  requests  traces.0  traces.1  traces.3  traces.4
docs/: Analysis & Future Prospects.md  System Architecture .md  index.md
docs/setup/: config.md  hw-setup.md  setup.md  sw-setup.md  troubleshooting.md
search/: search_index.json
setup/config/: index.html
setup/hw-setup/: index.html
setup/setup/: index.html
setup/sw-setup/: index.html
setup/troubleshooting/: index.html
src/: Butterworth.cpp  Butterworth_gz.cpp  Butterworth_gz.hpp  CMakeLists.txt  CallbackTest.cpp  CommandLine.cpp  Config.h  DHT11Gpio.cpp  DHT11Worker.h  ErrorHandler.cpp  ErrorHandler.h  Frame_Callback.cpp  Frame_Callback.hpp  INIReader_gz.cpp  INIReader_gz.h  LedController.h  MainDialog.cpp  MainDialog.hpp  MotionDetection.cpp  MotionDetection.hpp  MotionTimer.cpp  MotionTimer.h  RieszTransform_gz.cpp  RieszTransform_gz.hpp  SensorData.h  SensorFactory.h  WorkerThread.hpp  helloworld  libcam2opencv.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  motionworker.cpp  motionworker.h  serial.cpp
src/.deps/: cribsense-Butterworth.Po  cribsense-CommandLine.Po  cribsense-INIReader.Po  cribsense-MotionDetection.Po  cribsense-RieszTransform.Po  cribsense-VideoSource.Po  cribsense-main.Po  ini.Po
src/DHT11/: CMakeLists.txt  DHT11Gpio.cpp  DHT11Gpio.h  DHT11Gpio1.cpp  DHT11Gpio1.h  DHT11Worker.cpp  DHT11Worker.h  main.cpp
src/DHT11/dht11gpiod_autogen/: moc_predefs.h  mocs_compilation.cpp
src/DHT11/dht11gpiod_autogen/EWIEGA46WW/: moc_DHT11Worker.cpp  moc_DHT11Worker.cpp.d
src/GUI/: CMakeLists.txt  helloworld  mainwindow.cpp  mainwindow.h
src/GUI/helloworld_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
src/GUI/helloworld_autogen/include/: ui_mainwindow.h
src/GUI2/: CMakeLists.txt  helloworld  main.cpp  mainwindow.cpp  mainwindow.h
src/GUI2/helloworld_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_motionworker.cpp  moc_motionworker.cpp.d
src/GUI2/helloworld_autogen/include/: ui_mainwindow.h
src/GUI3/: DHT11Worker1.cpp  DHT11Worker1.h  LedController.h  mainwindow.cpp  mainwindow.h
src/GUI3/DHT11/: DHT11Worker.h
src/GUI3/dds_pub-sub/: AlarmPublisher.h  DDSAlarmSubscriber  README.md
src/GUI3/helloworld_autogen/: moc_predefs.h  mocs_compilation.cpp
src/GUI3/helloworld_autogen/EWIEGA46WW/: moc_DHT11Worker.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_motionworker.cpp.d
src/GUI3/helloworld_autogen/include/: ui_mainwindow.h
src/camera/: README.md
src/communication/dds/: AlarmMsg.h  AlarmMsg.idl  AlarmMsgPubSubTypes.cxx  AlarmMsgPubSubTypes.h  AlarmPublisher.cpp  AlarmSubscriber.cpp  README.md
src/core/: ApplicationBootstrap.cpp  ApplicationBootstrap.h  README.md  ServiceContainer.cpp  ServiceContainer.h
src/dds_pub-sub/: AlarmMsg.cxx  AlarmMsg.h  AlarmPublisher.cpp  CMakeLists.txt  DDSAlarmPublisher  DDSAlarmSubscriber  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/dds_pub-sub/DDSAlarmPublisher_autogen/: moc_predefs.h
src/detection/: README.md  README_EN.md  motionworker.cpp  motionworker.h
src/hardware/: LedController.h  README.md  README_EN.md
src/interfaces/: IComponent.h  README.md  README_EN.md
src/managers/: AlarmSystem.cpp  AlarmSystem.h  README.md  README_EN.md  SensorManager.cpp  SensorManager.h
src/performance/: PerformanceMonitor.h  README.md  README_EN.md
src/sensors/: CMakeLists.txt  DHT11Gpio.cpp  DHT11Worker.h  README.md  README_EN.md  SensorFactory.h
src/src_final/: CMakeLists.txt  LedController.h  mainwindow.cpp
src/src_final/DHT11/: DHT11Gpio.cpp  DHT11Gpio.h  dht11_test  main.cpp
src/src_final/dds_pub-sub/: AlarmPublisher.h  libcam2opencv.h  mainwindow.cpp  mainwindow.ui
src/src_final/dds_pub-sub/alarmpublisher_autogen/: moc_predefs.h
src/src_final/helloworld_autogen/EWIEGA46WW/: moc_DHT11Worker.cpp
src/ui/: README.md  README_EN.md  mainwindow.cpp  mainwindow.h  mainwindow.h.backup  mainwindow.ui
src/ui/controllers/: AlarmController.cpp  AlarmController.h  CameraController.cpp  CameraController.h  ChartController.cpp  ChartController.h  IUIController.h  PerformanceController.cpp  PerformanceController.h  SensorController.cpp  SensorController.h
src/utils/: Config.h  ErrorHandler.cpp  ErrorHandler.h  README.md  README_EN.md  SensorData.h
tests/: CMakeLists.txt  MotionDetection.cpp  VideoSource_test.cpp  VideoSource_test1.cpp  motion_detection_test.cpp
tests/ButterworthFilter/: Butterworth.cpp  Butterworth.hpp  CMakeLists.txt  main.cpp
tests/LED_test/: CMakeLists.txt  gpio_printer.cpp  gpioevent.cpp  gpioevent.h
tests/MotionDetection/: MotionDetection.cpp
tests/dds_pub-sub/: AlarmMsg.cxx  AlarmPublisher.cpp  CMakeLists.txt
